--- a/PriceCalculatorApi/appsettings.json
+++ b/PriceCalculatorApi/appsettings.json
@@ -8,7 +8,9 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "DefaultConnection": "data Source= (localdb)\\ MSSQLLocalDB; Database=PriceCalculator; Encrypt=False"
+    "DefaultConnection": "data Source= (localdb)\\ MSSQLLocalDB; Database=PriceCalculator; Encrypt=False",
+    "DessertPriceDb": "Server=tcp:dessert-price.database.windows.net,1433;Initial Catalog=DessertPrice;Persist Security Info=False;User ID=simon;Password=sG@3242114;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;"
+
   }
     
 }
