--- a/PriceCalculator.Services/PriceCalculatorApi.Services.csproj
+++ b/PriceCalculator.Services/PriceCalculatorApi.Services.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="14.0.0" />
+    <PackageReference Include="AutoMapper.Collection" Version="11.0.0" />
   </ItemGroup>
 
   <ItemGroup>
