need to make settings recalculations

--- a/PriceCalculatorApi/appsettings.json
+++ b/PriceCalculatorApi/appsettings.json
@@ -11,6 +11,12 @@
     "DefaultConnection": "data Source= (localdb)\\ MSSQLLocalDB; Database=PriceCalculator; Encrypt=False",
     "DessertPriceDb": "Server=tcp:dessert-price.database.windows.net,1433;Initial Catalog=DessertPrice;Persist Security Info=False;User ID=simon;Password=sG@3242114;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;"
 
+  },
+
+  "Jwt": {
+    "key": "this-is-my-super-sectet-key-845-324-2114",
+    "Issuer": "PriceCalculatorApi",
+    "Audience": "PriceCalculatorApi",
+    "ExpireMinutes": 60
   }
-    
 }
