take out secrets

--- a/PriceCalculatorApi/appsettings.Development.json
+++ b/PriceCalculatorApi/appsettings.Development.json
@@ -1,8 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "ConnectionStrings": {
+    "DefaultConnection": "data Source= (localdb)\\ MSSQLLocalDB; Database=PriceCalculator; Encrypt=False"
+  },
+
+  "Jwt": {
+    "key": "this-is-my-super-sectet-key-845-324-2114-i-make-it-even-longer-to-be-on-the_safe_side",
+    "Issuer": "PriceCalculatorApi",
+    "Audience": "PriceCalculatorApi",
+    "ExpireMinutes": 60
   }
 }
