--- a/PriceCalculatorApi/appsettings.json
+++ b/PriceCalculatorApi/appsettings.json
@@ -5,18 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-
-  "ConnectionStrings": {
-    "DefaultConnection": "data Source= (localdb)\\ MSSQLLocalDB; Database=PriceCalculator; Encrypt=False",
-    "DessertPriceDb": "Server=tcp:dessert-price.database.windows.net,1433;Initial Catalog=DessertPrice;Persist Security Info=False;User ID=simon;Password=sG@3242114;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;"
-
-  },
-
-  "Jwt": {
-    "key": "this-is-my-super-sectet-key-845-324-2114-i-make-it-even-longer-to-be-on-the_safe_side",
-    "Issuer": "PriceCalculatorApi",
-    "Audience": "PriceCalculatorApi",
-    "ExpireMinutes": 60
-  }
+  "AllowedHosts": "*"
 }
