--- a/PriceCalculatorApi/appsettings.Development.json
+++ b/PriceCalculatorApi/appsettings.Development.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "data Source= (localdb)\\ MSSQLLocalDB; Database=PriceCalculator; Encrypt=False"
+    "DefaultConnection": "data Source= (localdb)\\ MSSQLLocalDB; Database=PriceCalculator; Encrypt=False",
+    "Repricer": "Server=tcp:pricecalculater.database.windows.net,1433;Initial Catalog=repricer;Persist Security Info=False;User ID=pricecalculater;Password=sG@3242114;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
 
   "Jwt": {
