--- a/PriceCalculatorApi/appsettings.Production.json
+++ b/PriceCalculatorApi/appsettings.Production.json
@@ -1,13 +1,12 @@
 {
   "ConnectionStrings": {
-    //"DefaultConnection": "",
-    "Repricer": ""
+    "DefaultConnection": ""
   },
 
   "Jwt": {
     "key": "",
     "Issuer": "PriceCalculatorApi",
     "Audience": "PriceCalculatorApi",
-    "ExpireMinutes": 5
+    "ExpireMinutes": 60
   }
 }
