--- a/PriceCalculatorApi/appsettings.Production.json
+++ b/PriceCalculatorApi/appsettings.Production.json
@@ -4,7 +4,7 @@
   },
 
   "Jwt": {
-    "key": "this-is-my-super-sectet-key-845-324-2114-i-make-it-even-longer-to-be-on-the_safe_side",
+    "key": "",
     "Issuer": "PriceCalculatorApi",
     "Audience": "PriceCalculatorApi",
     "ExpireMinutes": 60
